# business-idea-crew

./: README.md  pyproject.toml
src/business_ideas/: crew.py  main.py
src/business_ideas/config/: agents.yaml  tasks.yaml
