[project]
name = "business_ideas"
version = "0.1.0"
description = "business-ideas using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.85.0,<1.0.0"
]

[project.scripts]
business_ideas = "business_ideas.main:run"
run_crew = "business_ideas.main:run"
train = "business_ideas.main:train"
replay = "business_ideas.main:replay"
test = "business_ideas.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
